View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028615 | Open CASCADE | OCCT:Visualization | public | 2017-04-02 16:07 | 2018-02-02 20:35 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Android | ||||
Product Version | 7.0.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028615: Visualization, TKOpenGl - enabling MSAA leads to black screen on OpenGL ES | ||||
Description | Enabling MSAA on OpenGL ES 3.1 platform leads to black screen without any error message. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28615 has been created by kgv. SHA-1: 7c35b4399f98c673ab2b11ba42435b0aad37bd14 Detailed log of new commits: Author: kgv Date: Sun Apr 2 16:48:26 2017 +0300 0028615: Visualization, TKOpenGl - enabling MSAA leads to black screen on OpenGL ES Removed redundant macros check. |
|
Please check compilation, regression testing is not needed. |
|
Dear BugMaster, Branch CR28615 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 7c35b4399f98c673ab2b11ba42435b0aad37bd14 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1214 |
|
Dear BugMaster, Branch CR28615 is TESTED. |
|
Branch CR28615 has been deleted by kgv. SHA-1: 7c35b4399f98c673ab2b11ba42435b0aad37bd14 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-04-02 16:07 | kgv | New Issue | |
2017-04-02 16:07 | kgv | Assigned To | => kgv |
2017-04-02 16:49 | git | Note Added: 0064845 | |
2017-04-02 16:49 | kgv | Note Added: 0064846 | |
2017-04-02 16:49 | kgv | Assigned To | kgv => bugmaster |
2017-04-02 16:49 | kgv | Severity | minor => trivial |
2017-04-02 16:49 | kgv | Status | new => resolved |
2017-04-02 16:49 | kgv | Status | resolved => reviewed |
2017-04-02 16:50 | kgv | Relationship added | child of 0026711 |
2017-04-02 16:52 | kgv | Product Version | 7.1.0 => 7.0.0 |
2017-04-03 16:51 |
|
Assigned To | bugmaster => mkv |
2017-04-03 18:41 |
|
Note Added: 0064877 | |
2017-04-03 18:42 |
|
Note Added: 0064878 | |
2017-04-03 18:42 |
|
Assigned To | mkv => bugmaster |
2017-04-03 18:42 |
|
Status | reviewed => tested |
2017-04-03 18:42 |
|
Test case number | => Not needed |
2017-04-14 14:28 | bugmaster | Changeset attached | => occt master 769a2e88 |
2017-04-14 14:28 | bugmaster | Status | tested => verified |
2017-04-14 14:28 | bugmaster | Resolution | open => fixed |
2017-05-12 11:36 | git | Note Added: 0065949 | |
2017-09-29 16:19 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |
2018-02-02 20:35 | kgv | Relationship added | related to 0029477 |