0028615: Visualization, TKOpenGl - enabling MSAA leads to black screen on OpenGL ES

Removed redundant macros check.